Fix some z-index issues

--- a/styles/main.css
+++ b/styles/main.css
@@ -442,7 +442,7 @@ div.ci-module-wrapper .ci-module-content {
 	box-shadow: 0px 5px 5px rgba(100, 100, 100, 0.3);
 	padding: 0px;
 	margin: 0px;
-	
+	z-index: 300;
 	padding: 25px;
 	padding-top: 15px;
 	padding-bottom: 20px;
